Use PEP 517 for building if supported (6/10)

--- a/mingw-w64-python-cmd2/PKGBUILD
+++ b/mingw-w64-python-cmd2/PKGBUILD
@@ -7,14 +7,15 @@ pkgver=2.5.8
 pkgrel=1
 pkgdesc="Extra features for standard library's cmd module (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-msys2_repository_url='https://github.com/python-cmd2/cmd2/'
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://cmd2.readthedocs.io/'
+msys2_repository_url='https://github.com/python-cmd2/cmd2/'
 msys2_references=(
   'pypi: cmd2'
 )
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-pyperclip"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-pyperclip"
          "${MINGW_PACKAGE_PREFIX}-python-pyreadline3"
          "${MINGW_PACKAGE_PREFIX}-python-wcwidth")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
