--- a/mingw-w64-python-priority/PKGBUILD
+++ b/mingw-w64-python-priority/PKGBUILD
@@ -4,36 +4,33 @@ _realname=priority
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
 pkgver=2.0.0
-pkgrel=4
+pkgrel=5
 pkgdesc='A pure-Python implementation of the HTTP/2 priority tree (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('MIT')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/python-hyper/priority'
 msys2_references=(
   'pypi: priority'
 )
+license=('spdx:MIT')
 depends=(${MINGW_PACKAGE_PREFIX}-python)
-makedepends=(${MINGW_PACKAGE_PREFIX}-python-setuptools)
-source=(https://github.com/python-hyper/${_realname}/archive/v${pkgver}.tar.gz)
-sha256sums=('ba93368818d915863cd168cda0baf977f393650e9cc80f2ca9eeb9acb0692b55')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+makedepends=(${MINGW_PACKAGE_PREFIX}-python-build
+             ${MINGW_PACKAGE_PREFIX}-python-installer
+             ${MINGW_PACKAGE_PREFIX}-python-setuptools)
+source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
+sha256sums=('c965d54f1b8d0d0b19479db3924c7c36cf672dbf2aec92d43fbdaf4492ba18c0')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
