--- a/mingw-w64-python-pyfilesystem2/PKGBUILD
+++ b/mingw-w64-python-pyfilesystem2/PKGBUILD
@@ -1,58 +1,41 @@
 # Maintainer: J. Peter Mugaas <jpmugaas@suddenlink.net>
 
 _realname=pyfilesystem2
+_pyname=fs
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=2.4.16
-pkgrel=3
+pkgrel=4
 pkgdesc="Python's filesystem abstraction layer (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/PyFilesystem/pyfilesystem2'
 msys2_references=(
   'archlinux: python-fs'
   'pypi: fs'
 )
-url='https://github.com/PyFilesystem/pyfilesystem2'
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-appdirs"
          "${MINGW_PACKAGE_PREFIX}-python-pytz"
          "${MINGW_PACKAGE_PREFIX}-python-six")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-# We would require "${MINGW_PACKAGE_PREFIX}-python-pyftpdlib"
-#checkdepends=("${MINGW_PACKAGE_PREFIX}-python-mock"
-#              "${MINGW_PACKAGE_PREFIX}-python-pyftpdlib")
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/PyFilesystem/pyfilesystem2/archive/v${pkgver}.tar.gz")
-sha256sums=('c06b2570fe8cb425d0bda70c518becfc97b6e49bab289edae9359a4fb606d43e')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-
-  # Set version for setuptools_scm
-  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
-}
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
+sha256sums=('ae97c7d51213f4b70b6a958292530289090de3a7e15841e108fbe144f069d313')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
-# We would require "${MINGW_PACKAGE_PREFIX}-python-pyftpdlib"
-#check() {
-#  cd "${srcdir}/python-build-${MSYSTEM}"
-#  ${MINGW_PREFIX}/bin/python setup.py test
-#}
-
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
