--- a/mingw-w64-python-pybox2d/PKGBUILD
+++ b/mingw-w64-python-pybox2d/PKGBUILD
@@ -4,14 +4,19 @@ _realname=pybox2d
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.3.10
-pkgrel=3
+pkgrel=4
 pkgdesc='Python wrapper for Box2D (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
 url='https://github.com/pybox2d/pybox2d'
-license=('custom')
+msys2_references=(
+  'pypi: Box2D'
+)
+license=('spdx:Zlib')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-swig"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("${url}/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
@@ -27,17 +32,17 @@ prepare() {
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-
-  GENERATOR="MSYS Makefiles" \
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} --root="${pkgdir}" -O1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
 
