--- a/mingw-w64-python-pyfasttextureutils-git/PKGBUILD
+++ b/mingw-w64-python-pyfasttextureutils-git/PKGBUILD
@@ -3,24 +3,24 @@
 _realname=pyfasttextureutils
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}-git")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 provides=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.r2.8fd8558
-pkgrel=5
+pkgver=0.r6.786d7cd
+pkgrel=1
 pkgdesc='Python module for quickly making certain modifications to images (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/LagoLunatic/PyFastTextureUtils"
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "git"
-             "patch"
-             "${MINGW_PACKAGE_PREFIX}-cc")
-_gitcommit=8fd8558f710c537d852ae407a5b316ab8bbb2337
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
+             "${MINGW_PACKAGE_PREFIX}-cc"
+             "git")
+_gitcommit=786d7cda8210ec2ad01f3397059ebf4d24365391
 source=("git+https://github.com/LagoLunatic/PyFastTextureUtils#commit=${_gitcommit}"
 "minmax.patch")
-sha256sums=('SKIP'
+sha256sums=('5e03c06895113129fda7c846d219ba62e4b7f27f6e2fa472674be8b480bed807'
             'fc49c27aca6cfc6778dee41bca7aa2ef670117ed181e6eef7a0250bf2e16ab56')
 
 pkgver() {
@@ -28,7 +28,7 @@ pkgver() {
   printf "0.r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
 }
 
-prepare() {  
+prepare() {
   cd "$srcdir"
   rm -rf python-build-${MSYSTEM} | true
   cp -r "PyFastTextureUtils" "python-build-${MSYSTEM}"
@@ -37,15 +37,16 @@ prepare() {
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "PyFastTextureUtils" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt"
 }
