--- a/mingw-w64-python-numba/PKGBUILD
+++ b/mingw-w64-python-numba/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=numba
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.61.0rc2
+pkgver=0.61.0
 pkgrel=1
 pkgdesc='NumPy aware dynamic Python compiler using LLVM (mingw-w64)'
 arch=('any')
@@ -27,17 +27,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-cc")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-scipy")
 options=('!emptydirs' '!strip')
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
-        "5e917b96ae7033e994f185cb37329a07e56d51b6.patch")
-sha256sums=('630b8ff1ddd567b488cb09c439cebcf750b95f960562f43e234c94a334fee14b'
-            'bad9d6aca6d1330c5bd02b570a8d923b99738f15beb95f600185445901b0d274')
-
-prepare() {
-  cd "${_realname}-${pkgver}"
-
-  # drop pinning numpy version from https://github.com/numba/numba/commit/5e917b96ae7033e994f185cb37329a07e56d51b6
-  patch -R -p1 -i ../5e917b96ae7033e994f185cb37329a07e56d51b6.patch
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('888d2e89b8160899e19591467e8fdd4970e07606e1fbc248f239c89818d5f925')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
