--- a/mingw-w64-python-llvmlite/PKGBUILD
+++ b/mingw-w64-python-llvmlite/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=llvmlite
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.44.0rc2
+pkgver=0.44.0
 pkgrel=1
 pkgdesc='Lightweight LLVM python binding for writing JIT compilers (mingw-w64)'
 arch=('any')
@@ -28,7 +28,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         "multi-defs.patch"
         "path_fix.patch")
-sha256sums=('7731d125071842c2465ecd9fd59736da7ae70d8c6d04566ede98296e8779a8ed'
+sha256sums=('07667d66a5d150abed9157ab6c0b9393c9356f229784a4385c02f99e94fc94d4'
             'b4610934ac8fd7e614d9ea920856ff6da2fbeb146028a664ada8543b8b33ec56'
             '813ecc48f18543f0d36b03c7596a1a6a26be31b9cfa44f1111ac232821844a79')
 
