[new-package] LLVM 16.0.6 (static) (and remove LLVM 15)

--- a/mingw-w64-llvm-16/PKGBUILD
+++ b/mingw-w64-llvm-16/PKGBUILD
@@ -10,23 +10,20 @@
 if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
   _clangprefix=1
 fi
+
 _realname=llvm
-pkgbase=mingw-w64-${_realname}-15
-pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-15"
-         "${MINGW_PACKAGE_PREFIX}-clang-15"
-         "${MINGW_PACKAGE_PREFIX}-compiler-rt-15")
-_version=15.0.7
+pkgbase=mingw-w64-${_realname}
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-16"
+         "${MINGW_PACKAGE_PREFIX}-clang-16"
+         "${MINGW_PACKAGE_PREFIX}-compiler-rt-16")
+_version=16.0.6
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
-pkgrel=3
-pkgdesc="C language family frontend for LLVM 15 (mingw-w64)"
+pkgrel=1
+pkgdesc="C language family frontend for LLVM 16 (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-msys2_references=(
-  'archlinux: llvm15'
-  "cpe: cpe:/a:llvm:llvm"
-)
 url="https://llvm.org/"
 license=("spdx:Apache-2.0 WITH LLVM-exception")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
@@ -46,31 +43,28 @@ source=("${_url}/llvm-${pkgver}.src.tar.xz"{,.sig}
         "0002-Revert-CMake-try-creating-symlink-first-on-windows.patch"
         "0003-add-pthread-as-system-lib-for-mingw.patch"
         "0004-enable-emutls-for-mingw.patch"
-        "0005-Fix-llvm-ar-fails-to-update-thin-archives.patch"
-        "0006-Do-not-check-file-access-time.patch"
-        "0011-List-memrchr-as-unavailable-on-Windows.patch"
+        "0005-Fix-Any-linker-error-with-multiple-compilers.patch"
         "0101-link-pthread-with-mingw.patch"
-        "0102-Explicitly-set-the-EmulatedTLS-codegen-option.patch")
+        "https://github.com/llvm/llvm-project/commit/ab8d4f5a122fde5740f8c084c8165f51a26c93c7.patch")
 # Some patch notes :)
 #0001-0099 -> llvm
 #0101-0199 -> clang
-sha256sums=('4ad8b2cc8003c86d0078d15d987d84e3a739f24aae9033865c027abae93ee7a4'
+#0201-0299 -> rt
+sha256sums=('e91db44d1b3bb1c33fcea9a7d1f2423b883eaa9163d3d56ca2aa6d2f0711bc29'
             'SKIP'
-            'a6b673ef15377fb46062d164e8ddc4d05c348ff8968f015f7f4af03f51000067'
+            '1186b6e6eefeadd09912ed73b3729e85b59f043724bb2818a95a2ec024571840'
             'SKIP'
-            '353832c66cce60931ea0413b3c071faad59eefa70d02c97daa8978b15e4b25b7'
+            '7911a2a9cca10393a17f637c01a6f5555b0a38f64ff47dc9168413a4190bc2db'
             'SKIP'
-            '8986f29b634fdaa9862eedda78513969fe9788301c9f2d938f4c10a3e7a3e7ea'
+            '39d342a4161095d2f28fb1253e4585978ac50521117da666e2b1f6f28b62f514'
             'SKIP'
             'eb03df53671df6627768141b3aaa76abe176a14e5e47911c97bec544387c4aff'
             '5754c357cfc17769e80d95b673d41b1e54616e2487e037d761a1ac8bb28a2849'
             '7f0c64cd87b61e894be632f180ae5291e1aa9f1d9d382608f659067eeeda7146'
-            '3837bd707d3d99a742e874d5c59a1e7d5502811d6926319974c5d9db86020039'
-            'f8f57954b049451c47eed5f1573550666f978a2e983165ad6ef59e2660077942'
-            '0f20f7a2578378b08d10b9e8ed7a6524f3a3425c8d380c6ea36b872fbff75b4b'
-            'cc6aeca56693070de910670f546d2ec50a056d5356540dbd7b5aa74ced45980b'
+            'ef2ae12a4d6ac7a52d38bb305818b26c830ae42d14468e4b1913157d998b2137'
+            '294756995c1d528f9b5d4b64559edfee151ce0a06bd863a2cafce58a82ce53fd'
             '715cb8862753854b2d9256e0b70003e2d1f57083d83eaeaf5a095fc72b8a4e26'
-            '72116b1ca0ade4cfe7ffb0f0c1b4a98fe387df28b5e9ceeb00785cbb7d0c1e54')
+            '614a86cb22d3785d8099760c00f3981908c9a97b65b280e7350ee5dd1a0967bd')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
               'D574BD5D1D0E98895E3BF90044F2485E45D59042') # Tobias Hieta
@@ -94,22 +88,22 @@ prepare() {
     mv ${pkg}-$pkgver.src ${pkg}
   done
 
+  # https://github.com/llvm/llvm-project/issues/63132
+  apply_patch_with_msg \
+    ab8d4f5a122fde5740f8c084c8165f51a26c93c7.patch
+
   # Patch llvm
   cd "${srcdir}/llvm"
   apply_patch_with_msg \
     "0001-Fix-GetHostTriple-for-mingw-w64-in-msys.patch" \
-    "0002-Revert-CMake-try-creating-symlink-first-on-windows.patch"
+    "0002-Revert-CMake-try-creating-symlink-first-on-windows.patch" \
+    "0005-Fix-Any-linker-error-with-multiple-compilers.patch"
 
   if (( ! _clangprefix )); then
     apply_patch_with_msg \
       "0003-add-pthread-as-system-lib-for-mingw.patch" \
       "0004-enable-emutls-for-mingw.patch"
   fi
-
-  apply_patch_with_msg \
-    "0005-Fix-llvm-ar-fails-to-update-thin-archives.patch" \
-    "0006-Do-not-check-file-access-time.patch" \
-    "0011-List-memrchr-as-unavailable-on-Windows.patch"
 
   # Patch clang
   cd "${srcdir}/clang"
@@ -118,19 +112,10 @@ prepare() {
     apply_patch_with_msg \
       "0101-link-pthread-with-mingw.patch"
   fi
-  apply_patch_with_msg \
-    "0102-Explicitly-set-the-EmulatedTLS-codegen-option.patch"
 }
 
 build() {
   cd "${srcdir}"
-
-  case "${CARCH}" in
-    i?86|armv7)
-      # lld needs all the address space it can get.
-      LDFLAGS+=" -Wl,--large-address-aware"
-      ;;
-  esac
 
   local -a platform_config
   local -a common_cmake_args
@@ -142,7 +127,7 @@ build() {
     common_cmake_args+=(-DCMAKE_BUILD_TYPE=Release)
   fi
   common_cmake_args+=(-Wno-dev
-    -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX}/opt/llvm-15
+    -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX}/opt/llvm-16
     -DDEFAULT_SYSROOT="../../.."
     -DCMAKE_SYSTEM_IGNORE_PATH=/usr/lib
     -DLLVM_HOST_TRIPLE="${CARCH}-w64-windows-gnu"
@@ -191,25 +176,25 @@ build() {
   ${MINGW_PREFIX}/bin/cmake.exe --build .
 }
 
-package_compiler-rt-15() {
-  pkgdesc="Runtime libraries for Clang and LLVM 15 (mingw-w64)"
+package_compiler-rt-16() {
+  pkgdesc="Runtime libraries for Clang and LLVM 16 (mingw-w64)"
   url="https://compiler-rt.llvm.org/"
   depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install "${srcdir}/build-${MSYSTEM}/projects/compiler-rt"
 
-  mkdir -p "${pkgdir}${MINGW_PREFIX}/opt/llvm-15/bin/"
-  find "${pkgdir}${MINGW_PREFIX}/opt/llvm-15/lib/clang/${_version}/lib/windows/" \
-    -name '*.dll' -exec mv '{}' "${pkgdir}${MINGW_PREFIX}/opt/llvm-15/bin/" \;
+  mkdir -p "${pkgdir}${MINGW_PREFIX}/opt/llvm-16/bin/"
+  find "${pkgdir}${MINGW_PREFIX}/opt/llvm-16/lib/clang/${_version%.[0-9].*}/lib/windows/" \
+    -name '*.dll' -exec mv '{}' "${pkgdir}${MINGW_PREFIX}/opt/llvm-16/bin/" \;
   # remove bin dir we created if it is still empty
-  rmdir "${pkgdir}${MINGW_PREFIX}/opt/llvm-15/bin/" 2>/dev/null || true
+  rmdir "${pkgdir}${MINGW_PREFIX}/opt/llvm-16/bin/" 2>/dev/null || true
 }
 
-package_clang-15() {
-  pkgdesc="C language family frontend for LLVM 15 (mingw-w64)"
+package_clang-16() {
+  pkgdesc="C language family frontend for LLVM 16 (mingw-w64)"
   url="https://clang.llvm.org/"
-  depends=("${MINGW_PACKAGE_PREFIX}-llvm-15"
-           "${MINGW_PACKAGE_PREFIX}-compiler-rt-15"
+  depends=("${MINGW_PACKAGE_PREFIX}-llvm-16"
+           "${MINGW_PACKAGE_PREFIX}-compiler-rt-16" \
            $( ((_clangprefix)) && echo \
              "${MINGW_PACKAGE_PREFIX}-crt" \
              "${MINGW_PACKAGE_PREFIX}-headers" \
@@ -220,8 +205,8 @@ package_clang-15() {
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install "${srcdir}/build-${MSYSTEM}/tools/clang"
 }
 
-package_llvm-15() {
-  pkgdesc="Low Level Virtual Machine - 15 (mingw-w64)"
+package_llvm-16() {
+  pkgdesc="Low Level Virtual Machine - 16 (mingw-w64)"
   depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 
   # Disable automatic installation of components that go into subpackages
@@ -232,16 +217,16 @@ package_llvm-15() {
 
   DESTDIR="${pkgdir}" cmake --install "${srcdir}/build-${MSYSTEM}"
 
-  install -Dm644 "${srcdir}/llvm/LICENSE.TXT" "${pkgdir}${MINGW_PREFIX}/opt/llvm-15/share/licenses/llvm/LICENSE"
+  install -Dm644 "${srcdir}/llvm/LICENSE.TXT" "${pkgdir}${MINGW_PREFIX}/opt/llvm-16/share/licenses/llvm/LICENSE"
 
   # Install CMake stuff
-  install -d "${pkgdir}"${MINGW_PREFIX}/opt/llvm-15/share/llvm/cmake/{modules,platforms}
-  install -Dm644 "${srcdir}"/llvm/cmake/modules/*.cmake "${pkgdir}"${MINGW_PREFIX}/opt/llvm-15/share/llvm/cmake/modules/
-  install -Dm644 "${srcdir}"/llvm/cmake/platforms/*.cmake "${pkgdir}"${MINGW_PREFIX}/opt/llvm-15/share/llvm/cmake/platforms/
+  install -d "${pkgdir}"${MINGW_PREFIX}/opt/llvm-16/share/llvm/cmake/{modules,platforms}
+  install -Dm644 "${srcdir}"/llvm/cmake/modules/*.cmake "${pkgdir}"${MINGW_PREFIX}/opt/llvm-16/share/llvm/cmake/modules/
+  install -Dm644 "${srcdir}"/llvm/cmake/platforms/*.cmake "${pkgdir}"${MINGW_PREFIX}/opt/llvm-16/share/llvm/cmake/platforms/
 
   # fix cmake files.
   local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
-  sed -e "s|${PREFIX_WIN}|${MINGW_PREFIX}|g" -i "${pkgdir}"/${MINGW_PREFIX}/opt/llvm-15/lib/cmake/llvm/LLVMExports.cmake
+  sed -e "s|${PREFIX_WIN}|${MINGW_PREFIX}|g" -i "${pkgdir}"/${MINGW_PREFIX}/opt/llvm-16/lib/cmake/llvm/LLVMExports.cmake
 }
 
 # template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
