--- a/mingw-w64-python-codespell/PKGBUILD
+++ b/mingw-w64-python-codespell/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=codespell
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.3.0
-pkgrel=2
+pkgver=2.4.0
+pkgrel=1
 pkgdesc="Fix common misspellings in source code (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,9 +19,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
-options=(!strip)
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('360c7d10f75e65f67bad720af7007e1060a5d395670ec11a7ed1fed9dd17471f')
+sha256sums=('587d45b14707fb8ce51339ba4cce50ae0e98ce228ef61f3c5e160e34f681be58')
 
 prepare() {
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
