avogadrolibs: update to 1.100.0

--- a/mingw-w64-avogadrolibs/PKGBUILD
+++ b/mingw-w64-avogadrolibs/PKGBUILD
@@ -4,8 +4,8 @@ _realname=avogadrolibs
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-qt6")
-pkgver=1.99.0
-pkgrel=2
+pkgver=1.100.0
+pkgrel=1
 pkgdesc='Libraries that provide 3D rendering, visualization, analysis and data processing useful in computational chemistry, molecular modeling, bioinformatics, materials science, and related areas (mingw-w64)'
 arch=(any)
 mingw_arch=(ucrt64 clang64 clangarm64)
@@ -27,9 +27,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-nlohmann-json"
              "${MINGW_PACKAGE_PREFIX}-pybind11"
              "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-qt6-5compat"
              "${MINGW_PACKAGE_PREFIX}-qt6-base"
-             #"${MINGW_PACKAGE_PREFIX}-qt6-svg"
+             "${MINGW_PACKAGE_PREFIX}-qt6-svg"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools"
              "${MINGW_PACKAGE_PREFIX}-spglib"
              "${MINGW_PACKAGE_PREFIX}-vtk"
@@ -39,17 +38,13 @@ source=(https://github.com/OpenChemistry/avogadrolibs/archive/${pkgver}/${_realn
         https://github.com/OpenChemistry/crystals/archive/${pkgver}/crystals-${pkgver}.tar.gz
         https://github.com/OpenChemistry/fragments/archive/${pkgver}/fragments-${pkgver}.tar.gz
         https://github.com/OpenChemistry/molecules/archive/${pkgver}/molecules-${pkgver}.tar.gz
-        001-fix-wrong-cmake-variable-name.patch::https://github.com/OpenChemistry/avogadrolibs/commit/6e2e84db.patch
-        002-fix-build-without-spglib.patch
         003-fix-install-python-modules.patch
         004-find-Qt6LinguistTools.patch
         005-fix-cmake-config-file.patch)
-sha256sums=('34808e3c602b0f60f3c160ff0220832aee777db86e962e3f958c6327fb434063'
-            '07468fefb7d41d6b9a96e2642aa1ace74416b624d7ec4149639f20ac940573b3'
-            'aa802bc071582471baab8e2f5f4befda43bee0fdb2557d1d2d335c142b70640e'
-            '5acb9d9c38ef8e71984ebf3f07574df909e5b122639a0708a3f8e14ba80e1ab6'
-            '285d7b8aef7cd489a2829840519051dbdbe232c06a540268860a3a6dbc8d5ca9'
-            '091182d2c8a57b57951282694c6d6534c0929e7a1e392bb9a73cca05e60c1bf0'
+sha256sums=('dd836d7287776a08673e664923960d13d222c5d630d1653bd182606e644de23c'
+            '5d05e49c24d435a6e9920379aa1c04ddc848b451c6cdfaa3095bd51f30a701b7'
+            '847276fbc7ea0f1db76949969af9d389b6c2520c823fb82e231760b285944e21'
+            '5417a2dae8e3173505ea6d3c61df2d38a2b8eec6bfa630d30fc98889c8c7ff59'
             'a47e551f39ea1cff22dcea5c6bf5b9c3aba5f69038351794c171e26638f314e7'
             '91cd109edf7b5344f5934d5d3c342f2ac20c86be54e591934df2c9c4def05067'
             '38f452b157ed6f89f0ffc584066abd14fe62c75ad452970d3cdcfdc4aba390a9')
@@ -69,8 +64,6 @@ prepare() {
 
   cd ${_realname}-${pkgver}
   apply_patch_with_msg \
-    001-fix-wrong-cmake-variable-name.patch \
-    002-fix-build-without-spglib.patch \
     003-fix-install-python-modules.patch \
     004-find-Qt6LinguistTools.patch \
     005-fix-cmake-config-file.patch
@@ -147,9 +140,8 @@ package_avogadrolibs-qt6() {
            "${MINGW_PACKAGE_PREFIX}-glew"
            "${MINGW_PACKAGE_PREFIX}-libarchive"
            #"${MINGW_PACKAGE_PREFIX}-libmsym"
-           "${MINGW_PACKAGE_PREFIX}-qt6-5compat"
            "${MINGW_PACKAGE_PREFIX}-qt6-base"
-           #"${MINGW_PACKAGE_PREFIX}-qt6-svg"
+           "${MINGW_PACKAGE_PREFIX}-qt6-svg"
            "${MINGW_PACKAGE_PREFIX}-vtk")
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install build-${MSYSTEM}/avogadro/molequeue
