avogadroapp: update to 1.100.0

--- a/mingw-w64-avogadroapp/PKGBUILD
+++ b/mingw-w64-avogadroapp/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=avogadroapp
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.99.0
+pkgver=1.100.0
 pkgrel=1
 pkgdesc='Advanced molecular editor designed for cross-platform use in computational chemistry, molecular modeling, bioinformatics, materials science, and related areas (mingw-w64)'
 arch=(any)
@@ -21,12 +21,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-eigen3"
              "${MINGW_PACKAGE_PREFIX}-vtk"
              "${MINGW_PACKAGE_PREFIX}-fast_float"
+             "${MINGW_PACKAGE_PREFIX}-nlohmann-json"
              "${MINGW_PACKAGE_PREFIX}-utf8cpp")
 source=(https://github.com/OpenChemistry/avogadroapp/archive/${pkgver}/${_realname}-${pkgver}.tar.gz
         https://github.com/OpenChemistry/avogadro-i18n/archive/${pkgver}/avogadro-i18n-${pkgver}.tar.gz
         001-fix-build-on-mingw.patch)
-sha256sums=('4713faa4e755433947924a381fd1631dfe46a9f27065765cfa04c120ed603189'
-            '0ca56e3ffd065f4981f2d5185c6de13fa7b9f6e78e98e9e3014ed9512d7c80ae'
+sha256sums=('8d73f5d24883ebe1a6ca54e13cf70aaf8125174190aa028e1e0ef48b95bd6b0b'
+            '4081156389c11998e2f96f9294d2ae3d2af0115b1c92371cd057a66406e676bf'
             'dd4f67e8f80ca96f024a142831ef1ba5cd6c57dca6590230a44b9268e6302508')
 
 prepare() {
