flatbuffers: update to 25.1.21

--- a/mingw-w64-flatbuffers/PKGBUILD
+++ b/mingw-w64-flatbuffers/PKGBUILD
@@ -4,7 +4,7 @@ _realname=flatbuffers
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=24.12.23
+pkgver=25.1.21
 pkgrel=1
 pkgdesc='Memory Efficient Serialization Library (mingw-w64)'
 arch=('any')
@@ -19,12 +19,14 @@ license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-numpy")
 depends=("${MINGW_PACKAGE_PREFIX}-libsystre")
 source=("https://github.com/google/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         0001-cmake-fix-install.patch)
-sha256sums=('7e2ef35f1af9e2aa0c6a7d0a09298c2cb86caf3d4f58c0658b306256e5bcab10'
+sha256sums=('7ab210001df1cd6234d0263801eeed3b941098bc9d6b41331832dd29cea4b555'
             '85564772505b69ef4a3dbbad5c85d0fadf6db10628e98346c546510fe7370d3e')
 noextract=(${_realname}-${pkgver}.tar.gz)
 
@@ -58,8 +60,10 @@ build() {
   ${MINGW_PREFIX}/bin/cmake.exe --build ./
 
   # Python bindings
-  cd "${srcdir}/${_realname}-${pkgver}/python"
-  VERSION="${pkgver}" "${MINGW_PREFIX}"/bin/python setup.py build
+  cp -r "${srcdir}"/${_realname}-${pkgver}/python "${srcdir}"/python-build-${MSYSTEM}
+  cd "${srcdir}"/python-build-${MSYSTEM}
+  VERSION="${pkgver}" \
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package_flatbuffers() {
@@ -73,12 +77,13 @@ package_python-flatbuffers() {
   pkgdesc='An efficient cross platform serialization library for Python (mingw-w64)'
   depends=("${MINGW_PACKAGE_PREFIX}-python")
   optdepends=("${MINGW_PACKAGE_PREFIX}-python-numpy: support for Numpy arrays")
+  options=(!strip)
 
-  cd "${srcdir}/${_realname}-${pkgver}/python"
-    VERSION="${pkgver}" \
-    MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    "${MINGW_PREFIX}"/bin/python setup.py install --prefix="${MINGW_PREFIX}" \
-      --root="${pkgdir}" --optimize=1 --skip-build
+  cd "python-build-${MSYSTEM}"
+  VERSION="${pkgver}" \
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 }
 
 # template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
