--- a/mingw-w64-python-jupyter-nbviewer/PKGBUILD
+++ b/mingw-w64-python-jupyter-nbviewer/PKGBUILD
@@ -4,7 +4,7 @@ _realname=nbviewer
 pkgbase=mingw-w64-python-jupyter-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-jupyter-${_realname}
 pkgver=1.0.1
-pkgrel=7
+pkgrel=8
 pkgdesc='Render Jupyter Notebooks as static web pages (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -36,6 +36,11 @@ source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realna
 sha256sums=('85233e53bc78ff216a99a2676a7e5f9557f0d4973797c36fdb81c9cc48821a73')
 
 prepare() {
+  cd "${srcdir}"/${_realname}-${pkgver}/
+  # Disable check for non-windows modules
+  sed -i "s|newrelic!=2.80.0.60||g" requirements.txt
+  sed -i "s|pylibmc||g" requirements.txt
+
   rm -f "${srcdir}"/${_realname}-${pkgver}/versioneer.py | true
 }
 
